--- a/Css/style.css
+++ b/Css/style.css
@@ -84,3 +84,22 @@ nav>div>a:hover{
     margin-top: -30px;
     
 }
+
+/* Products gallery styling */
+#productsGallery{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+.product{
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.product>img{
+    
+}
