--- a/Css/style.css
+++ b/Css/style.css
@@ -136,7 +136,7 @@ h4{
     mix-blend-mode: normal;
     
 }
-/* styling the speaker Dispala */
+/* styling the speaker Dispalay 1 */
 #speakerDisplay1{
     width: 1090px;
     height: 450px;
@@ -177,5 +177,30 @@ h4{
     margin-left: -600px;
     margin-bottom: -330px;
     
-    
+}
+
+/* Styling  Speaker Display 2*/
+#speakerDisplay2{
+    background-image: url("/SpeakerTable.png");
+    width: 1090px;
+    height: 280px;
+    margin-top: 30px;
+    margin-left: 100px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 60px;
+    border-radius: 10px;
+}
+#speakerDisplay2>#label2{
+    color: black;
+    font-size: 32px;
+}
+#speakerDisplay2>button{
+    margin-top: 15px;
+    width: 150px;
+    height: 40px;
+    border: 2px solid black;
+    background-color: transparent;
 }
