--- a/Css/style.css
+++ b/Css/style.css
@@ -310,6 +310,7 @@ h4{
 #footNav>div>a{
     text-decoration: none;
     color: white;
+    font-weight: 500;
 }
 #footNav>div>a:hover{
     text-decoration: underline solid #d87d4a ;
