Add the nav bar styling

--- a/Css/style.css
+++ b/Css/style.css
@@ -346,3 +346,5 @@ h4{
     padding-left: 150px;
     color: white;
 }
+
+/* ////////////////////////////////////////////////////////////////////////////////// */
