--- a/Css/headphone.css
+++ b/Css/headphone.css
@@ -83,6 +83,7 @@ nav>div>a:hover{
 #cartBtn{
     display: flex;
     flex-direction: row;
+    margin-top: 30px;
 }
 #quantityBtn{
     display: flex;
@@ -91,7 +92,7 @@ nav>div>a:hover{
     background-color: #f2f2f2;
 }
 #quantityBtn>h2{
-    font-size: 15px;
+    font-size: 20px;
     margin: 10px;
 }
 #quantityBtn>button{
