--- a/Css/headphone.css
+++ b/Css/headphone.css
@@ -156,7 +156,7 @@ nav>div>a:hover{
     border-radius: 10px;
 }
 
-/* Product list */
+/* Product list1 */
 #ymal{
     text-align: center;
     margin-top: 80px;
@@ -186,4 +186,58 @@ nav>div>a:hover{
     width: 170px;
     height: 40px;
     margin-top: 10px;
+}
+
+/* products list2 */
+#products3{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+}
+.productItem2{
+    background: white;
+    width: 350px;
+    height: 200px;
+    text-align: center;
+    position: relative;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    margin: 10px;
+}
+.productItem2>div>img{
+    position: absolute;
+    top: -80px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.productItem2>h4{
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  bottom: 50px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 1.28571px;
+}
+.shop2{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 20px;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 18px;
+    letter-spacing: 1px;
+    mix-blend-mode: normal;
+    
+}
+.shop2>a{
+    text-decoration: none;
+    color: #0b0c0d;
+}
+.shop2>a:hover{
+    color:  #d87d4a;
 }
