--- a/Css/headphone.css
+++ b/Css/headphone.css
@@ -241,3 +241,109 @@ nav>div>a:hover{
 .shop2>a:hover{
     color:  #d87d4a;
 }
+
+/* Styling audio gear div elements */
+#audioGear2{
+    width: 1090px;
+    height: 300px;
+    margin-left: 100px;
+    margin-top: 170px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#audioGearDetails{
+    width: 535px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-right: 130px;
+    
+
+}
+#audioGearDetails>h3>span{
+    color: #D87D4A;
+}
+#audioGearDetails>h3{
+    font-size: 30px;
+}
+#audioGearDetails>p{
+    font-size: 20px;
+    margin-top: 10px;
+}
+#audioGearImage>img{
+    border-radius: 10px;
+}
+
+/* styling footer  */
+#footer{
+    background-color: #0b0c0d;
+    margin-top: 400px;
+    display: flex;
+    flex-direction: column;
+    
+}
+#footer1{
+    display: flex;
+    flex-direction: column; 
+    
+}
+
+#navBar2{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    color: white;
+    align-items: center;
+    padding-left: 150px;
+    padding-right: 150px;
+    margin-top: 30px;
+}
+#footNav{
+    display: flex;
+    flex-direction: row;
+}
+#footNav>div{
+    margin-left: 20px;
+}
+#footNav>div>a{
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+}
+#footNav>div>a:hover{
+    text-decoration: underline solid #d87d4a ;
+}
+
+#foot2{
+    display: flex;
+    flex-direction: row;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+#foot2Para{
+    width: 535px;
+    color: white;
+}
+#socials{
+    width: 535px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+}
+#socials>div>img{
+    background-color: white;
+    margin: 10px;
+}
+#socials>div>img:hover{
+    background-color: #d87d4a;
+}
+
+#foot3{
+    padding-left: 150px;
+    color: white;
+}
