--- a/Css/headphone.css
+++ b/Css/headphone.css
@@ -355,3 +355,7 @@ button:hover{
     transform: scale(1.05);
     border-radius: 5px;
 }
+/* ///////////////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////////////// */
+
+
