--- a/Css/style.css
+++ b/Css/style.css
@@ -376,6 +376,41 @@ button:hover{
 }
 
 
+/* DROPDWON MENU AND HUMBERGER ICON */
+#navIcon>a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+#navIcon>a:hover{
+    color: #D87D4A;
+}
+#dropMenu{
+    display: none;
+    position: absolute;
+    min-width: 80px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    background-color: white;
+}
+#dropMenu>div>a{
+    display: block;
+    text-decoration: none;
+    font-size: 17px;
+    color: #0b0c0d;
+    padding: 12px 16px;
+    float: none;
+}
+#dropMenu>div>a:hover{
+    background-color: #d87d4a;
+}
+#dropDown{
+    overflow: hidden;
+}
+#navIcon{
+    display: none;
+}
+
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
 /* ////////////////////////////////////////////////////////////////////////////////// */
 @media only screen and (max-width:768px){
@@ -574,6 +609,19 @@ button:hover{
         align-items: center;
         padding-left: 0;
     }
+
+    /* Dropdown Menu */
+    #dropDown{
+        margin-top: -50px;
+        margin-left: 10px;
+    }
+    #navIcon{
+        display: block;
+    }
+    #dropMenu{
+        display: none;
+        margin-top: 40px;
+    }
 }
 
 /* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -681,5 +729,18 @@ button:hover{
         width: 550px;
         margin-left: 0px;
         margin-right: 0px;
+    }
+
+    /* Dropdown Menu */
+    #dropDown{
+        margin-top: -50px;
+        margin-left: 10px;
+    }
+    #navIcon{
+        display: block;
+    }
+    #dropMenu{
+        display: none;
+        margin-bottom: 40px;
     }
 }
