--- a/Css/headphone.css
+++ b/Css/headphone.css
@@ -58,6 +58,10 @@ nav>div>a:hover{
     padding-right: 100px;
     margin-top: 30px;
 }
+#newProduct>#image3>img{
+    width: 500px;
+    height: 500px;
+}
 #backBtn>a{
     text-decoration: none;
     font-size: 18px;
@@ -149,10 +153,14 @@ nav>div>a:hover{
     margin-right: 50px;
 }
 #userPic>div>img{
+    width: 450px;
+    height: 250px;
     margin-top: 20px;
     border-radius: 10px;
 }
 #imgHp>img{
+    width: 550px;
+    height: 520px;
     margin-top: 20px;
     border-radius: 10px;
 }
@@ -172,6 +180,8 @@ nav>div>a:hover{
     margin-right: 75px;
 }
 .productItem>div>img{
+    width: 300px;
+    height: 250px;
     border-radius: 5px;
 }
 .name{
@@ -208,6 +218,8 @@ nav>div>a:hover{
     margin: 10px;
 }
 .productItem2>div>img{
+    width: 200px;
+    height: 200px;
     position: absolute;
     top: -80px;
     left: 50%;
@@ -276,6 +288,8 @@ nav>div>a:hover{
     margin-top: 10px;
 }
 #audioGearImage>img{
+    width: 535px;
+    height: 600px;
     border-radius: 10px;
 }
 
@@ -357,5 +371,172 @@ button:hover{
 }
 /* ///////////////////////////////////////////////////////////////////////////////////// */
 /* //////////////////////////////////////////////////////////////////////////////////// */
+@media only screen and (max-width:768px){
+    nav{
+        display: none;
+    }
 
+    #newProduct{
+        width: 724px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+        
+    }
+    #newProduct>#image3>img{
+        width: 300px;
+        height: 300px;
+        margin-left: 20px;
+    }
+    #newProduct>#description{
+        font-size: 50%;
+        margin-left: 40px;
+        padding-right: 30px;
+    }
+    #description{
+        width: 364px;
+    }
+    #description>p{
+        font-size: 14px;
+        width: 350px;
+    }
+    #cartBtn>button{
+        font-size: 13px;
+    }
+    #cartBtn>#quantityBtn>button{
+        font-size: 15px;
+    }
+
+    #features{
+        display: flex;
+        flex-direction: column;
+        width: 724px;
+        margin-bottom: 100px;
+    }
+    #paragraphs{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 20px;
+    }
+    #paragraphs>p{
+        text-align: center;
+    }
+    #accessories{
+        width: 450px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 270px;
+        margin-top: 20px;
+    }
+
+    #galleryDisplay{
+        display: flex;
+        flex-direction: column;
+        width: 724px;
+        margin: 0px;
+    }
+    #userPic{
+        display: flex;
+        flex-direction: row;
+        margin-left: 20px;
+        gap: 15px;
+    }
+    #userPic>div>img{
+        width: 330px;
+    }
+    #imgHp>img{ 
+        width: 675px;
+        margin-left: 20px;
+    }
+
+
+    #products2{
+        width: 724px;
+        margin: 0px;
+        padding-left: 10px;
+    }
+    .productItem{
+        width: 221px;
+        height: 250px;
+        margin: 10px;
+    }
+    .productItem>div>img{
+        width: 200px;
+        height: 200px;
+    }
+
+    .productItem2{
+        width: 221px;
+        height: 200px;
+    }
+
+    #audioGear2{
+        display: flex;
+        flex-direction: column;
+        width: 724px;
+        margin-left: 0px;
+        padding-left: 20px;
+        margin-top: 100px;
+    }
+    #audioGearDetails{
+        width: 650px;
+        padding: 0px;
+        margin: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    #audioGearDetails>h3{
+        text-align: center;
+    }
+    #audioGearImage>img{
+        width: 650px;
+        height: 500px;
+        margin-bottom: 100px;
+    }
+
+    /* Footer */
+    #footer{
+        margin-top: 500px;
+    }
+    #foot1>#navBar2{
+        display: flex;
+        flex-direction: column;
+    }
+    #footNav{
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+    }
+    #foot2{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #foot2Para{
+        text-align: center;
+        width: 400px;
+    }
+    #foot2>#socials{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 400px;
+    }
+    #foot3{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
+    }
+}
 
