--- a/Css/checkout.css
+++ b/Css/checkout.css
@@ -58,7 +58,7 @@ nav>div>a:hover{
 
 /* Main Container */
 #container{
-    background-color: gainsboro;
+    background-color: #f2f2f2;
     display: flex;
     flex-direction: row;
 }
@@ -68,6 +68,7 @@ nav>div>a:hover{
     width: 600px;
     height: auto;
     margin: 20px;
+    margin-left: 130px;
 }
 #container1>h1{
     margin-left: 20px;
@@ -159,9 +160,87 @@ label{
     font-weight: 600;
 }
 #container2{
-    width: 400px;
-    height: auto;
+    width: 370px;
+    height: fit-content;
     background-color: white;
     margin: 20px;
+}
+#container2>h1{
+    margin-left: 20px;
+}
+.order{
+    display: flex;
+    flex-direction: row;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+.order>img{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 2px;
+}
+.order>.price{
+    display: flex;
+    flex-direction: column;
+}
+.order>.price>h3{
+    font-size: 14px;
+}
+.order>.price>p{
+    font-size: 12px;
+}
+.order>.quantity{
+    margin-left: 200px;
+}
+
+#total{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#shipfee{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#vat{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#gtotal{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#calculations{
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 25px;
+}
+#calculations>div>h3{
+    font-size: 18px;
+    font-weight: 600;
+}
+#gtotal>h3{
+    color: #d87d4a;
+}
+
+#pay{
+    width: 300px;
+    height: 40px;
+    background-color: #d87d4a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+#pay>a{
+    text-decoration: none;
+    color: white;
+    background-color: #d87d4a;
 }
 
